# Python_Web

./: README.md
Homework_1/: README.md
Homework_1/bot_assistant/bot_assistant/: Diagram_for_classes.drawio  Notebook.py  bot.py  virtual_assistant.py
Homework_10/: README.md  pyproject.toml
Homework_10/quotes/quotes/: settings.py
Homework_10/quotes/quotesapp/templates/quoteapp/: author_detail.html
Homework_10/quotes/users/: forms.py  views.py
Homework_10/quotes/utils/: fill_db.py
Homework_11/: README.md  pyproject.toml
Homework_11/Fast_API/: alembic.ini  main.py  pyproject.toml  schemas.py
Homework_11/Fast_API/migration/versions/: 0d93cc9a38ed_init.py
Homework_11/Fast_API/src/db/: db.py  models.py
Homework_11/Fast_API/src/routes/: contacts.py
Homework_12/: README.md
Homework_12/Fast_API/: alembic.ini  main.py  pyproject.toml  schemas.py
Homework_12/Fast_API/alembic/versions/: 895785974bfe_init.py
Homework_12/Fast_API/src/db/: db.py  models.py
Homework_12/Fast_API/src/repository/: users.py
Homework_12/Fast_API/src/routes/: auth.py  contacts.py
Homework_13/Django_project/: README.md
Homework_13/Fast_API/: README.md  docker-compose.yml  main.py  pyproject.toml  schemas.py
Homework_13/Fast_API/postgres-data/base/13481/: pg_internal.init
Homework_13/Fast_API/postgres-data/base/16384/: 1247  16390  16403  16412  16423  2224  2579  2610  2620  2657  2659  2663  2665  2666  2667  2674  2679  2701  2703  2704  3455  pg_internal.init
Homework_13/Fast_API/postgres-data/global/: 1260  pg_control  pg_internal.init
Homework_13/Fast_API/postgres-data/pg_stat/: db_0.stat  db_13481.stat  db_16384.stat  global.stat
Homework_13/Fast_API/src/conf/: config.py
Homework_13/Fast_API/src/db/: models.py
Homework_13/Fast_API/src/repository/: contacts.py  users.py
Homework_13/Fast_API/src/routes/: auth.py  contacts.py  users.py
Homework_13/Fast_API/src/services/: auth.py
Homework_14/: README.md
Homework_14/Fast_API/: alembic.ini  main.py  pyproject.toml  schemas.py  test.db
Homework_14/Fast_API/alembic/versions/: d6f2347c443e_init.py
Homework_14/Fast_API/docs/: conf.py
Homework_14/Fast_API/docs/_build/doctrees/: environment.pickle  index.doctree
Homework_14/Fast_API/docs/_build/html/: .buildinfo  genindex.html  index.html  objects.inv  py-modindex.html  search.html  searchindex.js
Homework_14/Fast_API/docs/_build/html/_sources/: index.rst.txt
Homework_14/Fast_API/postgres-data/base/13481/: pg_internal.init
Homework_14/Fast_API/postgres-data/base/16384/: 1249  1259  16385  16388  16399  16401  16419  16420  2604  2606  2608  2656  2658  2662  2664  2673  2678  2699  2702  5002  pg_internal.init
Homework_14/Fast_API/postgres-data/global/: 1262  2671  pg_control  pg_internal.init
Homework_14/Fast_API/postgres-data/pg_stat/: db_0.stat  db_13481.stat  db_16384.stat  global.stat
Homework_14/Fast_API/src/conf/: config.py
Homework_14/Fast_API/src/repository/: contacts.py  users.py
Homework_14/Fast_API/src/routes/: auth.py  contacts.py
Homework_14/Fast_API/src/services/: auth.py
Homework_14/Fast_API/tests/: conftest.py  test_repository_contacts.py  test_repository_users.py  test_route_auth.py
Homework_2/: README.md
Homework_2/bot_assistant/bot_assistant/: Dockerfile  bot.py  run.py  virtual_assistant.py
Homework_3/: README.md  factorize_func.py  sort.py  sort_folder.py
Homework_4/: README.md  main.py  test.py
Homework_4/env/Scripts/: activate  activate.bat
Homework_4/storage/: data.json
Homework_5/: README.md  info.txt  main.py  main_py.py  produce.py  requirements.txt  server.py  test.py
Homework_5/env/Scripts/: activate  activate.bat  names-script.py
Homework_6/: README.md  fill_data.py  query_1.sql  query_10.sql  query_2.sql  query_3.sql  query_5.sql  query_6.sql  query_7.sql  query_8.sql  query_9.sql  run_query.py  salary.db  salary.sql
Homework_6/env/Scripts/: activate  activate.bat
Homework_7/: README.md  alembic.ini  colladge.db  connect_db.py  models.py  pyproject.toml  seed.py
Homework_7/alembic/versions/: 7555c7969341_init.py
Homework_7/tests/: test.py
Homework_8/: README.md  config.ini  pyproject.toml
Homework_8/first_part/: read_from_json.py  search_information.py
Homework_8/second_part/: consumer.py  models.py  produser.py
Homework_9/: README.md  pyproject.toml
Homework_9/BS4/: main.py  quotes.json
Homework_9/DB/: connect.py  models.py  read_from_json.py  seeds.py
Homework_9/Scrapy/: main.py
