[tool.poetry]
name = "homework-8"
version = "0.1.0"
description = ""
authors = ["Pavlik-Ravlik <pastet1990@icloud.com>"]
readme = "README.md"
packages = [{include = "homework_8"}]

[tool.poetry.dependencies]
python = "^3.10"
pymongo = {extras = ["srv", "tls"], version = "^4.4.1"}
redis = "^4.6.0"
celery = "^5.3.1"
mongoengine = "^0.27.0"
pika = "^1.3.2"
faker = "^19.2.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
