[tool.poetry]
name = "fast-api"
version = "0.1.0"
description = ""
authors = ["Pavlik-Ravlik <pastet1990@icloud.com>"]
readme = "README.md"
packages = [{include = "fast_api"}]


[tool.poetry.dependencies]
python = "^3.10"
python-jose = {extras = ["cryptography"], version = "^3.3.0"}
passlib = {extras = ["bcrypt"], version = "^1.7.4"}
python-multipart = "^0.0.6"
libgravatar = "^1.0.4"
fastapi = "^0.103.1"
unicorn = {extras = ["standart"], version = "^2.0.1.post1"}
alembic = "^1.12.0"
psycopg2 = "^2.9.7"
sqlalchemy = "^2.0.20"
uvicorn = {extras = ["standard"], version = "^0.23.2"}
pydantic = {extras = ["email"], version = "^2.3.0"}
fastapi-mail = "^1.4.1"
redis = "^4.2.0rc1"
redis-lru = "^0.1.2"
python-dotenv = "^1.0.0"
fastapi-limiter = "^0.1.5"
cloudinary = "^1.34.0"
pytest = "^7.4.2"
httpx = "^0.25.0"

[tool.pytest.ini_options]
pythonpath = ["."]

[tool.poetry.group.dev.dependencies]
sphinx = "^7.2.6"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
